public/css/main.css
.login-btn {
  position: absolute;
  right: 0;
  top: 0;
  display: inline-block;
  padding: 10px;
  background-color: #000;
  color: #fff;
}
.profile-btn{
	position: absolute;
  right: 0;
  top: 40px;
}
a.login-btn:hover {
  color: #fff;
  background-color: #333;
}

body {
	font-family: 'Open Sans', sans-serif;
}

.main_heading {
	font-size: 64px;
	letter-spacing: 34px;
	font-weight: 800;
	text-transform: uppercase;
	text-align: center;
	color: #333;
	padding: 40px 0px;
	margin-bottom: 0px;
	border-bottom: 1px dashed #ccc;
	transition: 0.3s;
}

.main_heading .fa {
	color: #FFC200;
	transition: 0.3s;
}

.main_heading:hover {
	color: #FFC200;
}

.main_heading:hover .fa {
	color: #333;
}

h3.date {
	letter-spacing: 4px;
	text-transform: uppercase;
	text-align: center;
	color: #999;
	font-size: 16px;
	margin: 40px 0;
	font-weight: 400;
}

.theme {
	color: #333;
}

.day_container {
	padding-bottom: 50px;
	border-bottom: 1px dashed #999;
	text-align: center;
}
.number
{
	font-size: 20px;
	font-weight: 600;
}

.profile-text
{
	font-size: 12px;
	font-weight: 100;
	color: grey;
	position: absolute;
	top: 55px;
	margin-left: -35px;
}
.profile-text:nth-child(2)
{
	margin-left: -50px;
}
.single_image {
	display: block;
	overflow: hidden;
}

.meta {
	padding: 10px 0;
	color: #666;
	font-size: 13px;
	margin-bottom: 30px;
}

[data-clearing] li {
	margin-right: 0px;
}

.clearing-blackout {
	background-color: rgba(0,0,0,0.9);
}

.clearing-assembled .clearing-container .visible-img {
	background-color: transparent;
}

.clearing-assembled .clearing-container .carousel {
	background-color: rgba(0,0,0,0.6);
}

#login-container {
	margin-top: 150px;
}

#login-container h2 {
	font-weight: 800;
	font-size: 24px;
	text-transform: uppercase;
	text-align: center;
	margin-bottom: 40px;
}

button, .button {
	background: none;
	background-color: #eee;
	color: #333;
	border-bottom: 3px solid #333;
}

button:hover, .button:hover {
	background-color: #ddd;
	color: #333;
}

.user-page-theme h3 {
	margin-top: 20px;
	text-align: center;
}

.user-page-theme h5 {
	margin-top: 20px;
	margin-bottom: 40px;
	text-align: center;
}

.dropzone {
	border-radius: 0;
	border: 1px solid #999;
}

.dropzone input[type="file"] {
	display: none;
}

.item {
	width: 33%;
	margin-top: 5px;
}

.item .meta {
	top: 100%;
	position: absolute;
	height: 100%;
	width: 100%;
	transition: 0.3s;
	background-color: rgba(255,255,255, 0.9);
	padding: 20px;
	font-size: 14px;
	text-align: center;
	font-weight: 800;
	text-transform: uppercase;
	color: #333;
}

.item:hover .meta {
	top: 0;
}

.images_container ul li {
  list-style: none;
}

.single-image
{
	text-align: center;
}
.single-image > img
{
	margin: 0 auto;
	width: 800px;
}
.profile-picture
{
	border-radius: 300px;
	width: 90px;
	height: 90px;
	margin: 0px 80px;
}

a.user_link {
	color: #000;
	font-weight: bold;
 	background-color: rgba(255,255,255,0.8);
	padding: 5px;
	position: absolute;
	bottom: 0px;
	box-sizing: border-box;
	width: 100%;
}
.share
{
	padding: 20px;
}
.share img {
width: 35px;
padding: 5px;
border: 0;
box-shadow: 0;
display: inline;
}
@media screen and (max-width: 768px) {
  .item { width: 100%; }
}

